--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_local_proxy/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_local_proxy/context_template_args.yaml
@@ -325,6 +325,7 @@ dashboard:
         username: test5JeB
     secret_key: kQt7XsbPVNDABuHyngdJuppnzP5i82Mz
   keystone_creds: {}
+  federation: {}
 database:
   galera_creds:
     audit:
