--- a/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_keycloak/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_local_non_dvr_keycloak/context_template_args.yaml
@@ -124,6 +124,21 @@ dashboard:
         username: test5JeB
     secret_key: kQt7XsbPVNDABuHyngdJuppnzP5i82Mz
   keystone_creds: {}
+  federation:
+    openid:
+      enabled: true
+      providers:
+        keycloak:
+          enabled: true
+          description: External Authentication Service
+          metadata:
+            client:
+              client_id: os
+            provider:
+              value_from:
+                from_url:
+                  url: https://keycloak.it.just.works/auth/realms/iam/.well-known/openid-configuration
+          token_endpoint: https://keycloak.it.just.works/auth/realms/iam/protocol/openid-connect/token
 database:
   galera_creds:
     audit:
