Allow non-admins migrate instances via Horizon too
.. by default, same as already allowed in Nova API.

This is follow-up to Idd76a0cc0a4a8c68ae0e71e055e44e736a6977b2

Initial patch updates nova policies in a way that is not automatically
picked up by the controller to apply to Horizon too, need to do this
explicitly.

Closes-Issue: PRODX-46187
Change-Id: Ia7a2cc980be759072f37fcebcccb98a2d8e55d1d

--- a/openstack_controller/templates/preset/compute.yaml
+++ b/openstack_controller/templates/preset/compute.yaml
@@ -95,6 +95,14 @@ services:
   dashboard:
     horizon:
       values:
+        {%- if OSVer.antelope <= OSVer[openstack_version] %}
+        conf:
+          policy.d:
+            nova:
+              01-controller-default.yaml:
+                "os_compute_api:os-migrate-server:migrate": "rule:project_member_or_admin"
+                "os_compute_api:os-migrate-server:migrate_live": "rule:project_member_or_admin"
+        {%- endif %}
         network:
           dashboard:
             ingress:
