--- a/openstack_controller/templates/preset/compute-tf.yaml
+++ b/openstack_controller/templates/preset/compute-tf.yaml
@@ -103,6 +103,14 @@ services:
                 tungstenfabric:
                   dashboard_name: contrail_openstack_dashboard.overrides
         {%- endif %}
+        {%- if OSVer.antelope <= OSVer[openstack_version] %}
+        conf:
+          policy.d:
+            nova:
+              01-controller-default.yaml:
+                "os_compute_api:os-migrate-server:migrate": "rule:project_member_or_admin"
+                "os_compute_api:os-migrate-server:migrate_live": "rule:project_member_or_admin"
+        {%- endif %}
         network:
           dashboard:
             ingress:
