Enable AvailabilityZoneFilter on caracal
Related-Prod: PRODX-46188
Change-Id: I560969c942f3a15e169329ef29c644b53b6b3e96

--- a/openstack_controller/templates/preset/compute-tf.yaml
+++ b/openstack_controller/templates/preset/compute-tf.yaml
@@ -161,7 +161,7 @@ services:
               # - AggregateNumInstancesFilter
               - AggregateTypeAffinityFilter
               # - AllHostsFilter
-              {%- if openstack_version in ['queens', 'rocky', 'stein', 'train', 'ussuri', 'victoria', 'xena', 'wallaby', 'yoga', 'zed', 'antelope'] %}
+              {%- if openstack_version in ['queens', 'rocky', 'stein', 'train', 'ussuri', 'victoria', 'xena', 'wallaby', 'yoga', 'zed', 'antelope', 'caracal'] %}
               - AvailabilityZoneFilter
               {%- endif %}
               - ComputeFilter
